updated html and JS

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="final-score"></div>
     <form>
       <label for="initials">Enter your initials:</label><br>
-      <input type="text" id="initials" name="initials"><br>
+      <textarea type="text" id="userInitials" name="userInitials"></textarea><br>
       <button type="button" id="save-score">Save Score</button>
     </form> 
   </div>
