updated score area

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <label for="initials">Enter your initials:</label><br>
       <textarea type="text" id="userInitials" name="userInitials"></textarea><br>
       <button type="button" id="save-score">Save Score</button>
+      <div>
+        <ul class="scores">Scores</ul>
+          
     </form> 
   </div>
   <script src="script.js"></script>
