trying to get score board to function

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <textarea type="text" id="userInitials" name="userInitials"></textarea><br>
       <button type="button" id="save-score">Save Score</button>
       <div>
-        <ul class="scores">Scores</ul>
+        <ul id="scores">Scores</ul>
           
     </form> 
   </div>
